--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,3 +1,30 @@
-<h1>Blogposts#index</h1>
+<h1>Blah! Blog</h1>
+<h4>~ Ramblings of a chaotic mind ~</h4>
+
+<h2>Entries</h2>
+
+<ul>
+  <% @posts.each do |post| %>
+    <li>
+      <a href="/blogposts/<%= post.id %>">
+        <%= post.title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
+
+<%# <ul>
+  <% @posts.each do |post| %>
+    <%#<li>
+      <%= post.title %>
+    <%#</li>
+
+    <li>
+      <%= post.body %>
+    <%#</li>
+  <% end %>
+<%#</ul> %>
+
+<%# <h1>Blogposts#index</h1>
 <h2>Hello, Rails!</h2>
-<p>Find me in app/views/blogposts/index.html.erb</p>
+<p>Find me in app/views/blogposts/index.html.erb</p> %>
